try to use spring-boot build gralvvm native byte JavaFX